No need to set Windows env variables now.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9750 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
+### Need to set rc ccompiler before enable language
+if(WIN32)
+    SET(CMAKE_RC_COMPILER "windres")
+endif(WIN32)
 project(simgrid CXX C)
 set(CMAKE_C_FLAGS "" CACHE TYPE INTERNAL FORCE)
 set(CMAKE_CXX_FLAGS "" CACHE TYPE INTERNAL FORCE)
@@ -113,22 +117,13 @@ ENDIF(SIZEOF_LONG EQUAL 4)
 
 if(WIN32)
 
-	set(INCLUDES_MORE $ENV{INCLUDE})
-	string(REPLACE "\\" "/" INCLUDES_MORE "${INCLUDES_MORE}")
-	foreach(include_dir ${INCLUDES_MORE})
-	    if(IS_DIRECTORY ${include_dir})
-	        string(REGEX MATCH ".*[ ].*" testoki "${include_dir}")
-	        if(testoki)
-	        	string(REPLACE " " "\\ " include_dir "${include_dir}")
-	            set(INCLUDES ${INCLUDES} \"${include_dir}\")
-	        else(testoki)
-	            set(INCLUDES ${INCLUDES} ${include_dir})
-	        endif(testoki)
-	    else(IS_DIRECTORY ${include_dir})
-	        message(FATAL_ERROR "${include_dir} not find")
-	    endif(IS_DIRECTORY ${include_dir})
-	endforeach(include_dir ${INCLUDES_MORE})
-
+    #Need env INCLUDE 
+    set(CMAKE_INCLUDE_WIN "${CMAKE_C_COMPILER}")
+    set(CMAKE_LIB_WIN "${CMAKE_C_COMPILER}")
+    string(REGEX REPLACE "/bin/gcc.*" "/include"  CMAKE_INCLUDE_WIN "${CMAKE_INCLUDE_WIN}")
+    string(REGEX REPLACE "/bin/gcc.*" "/lib"  CMAKE_LIB_WIN "${CMAKE_LIB_WIN}")
+    set(INCLUDES ${INCLUDES} ${CMAKE_INCLUDE_WIN})
+    
     if(BORLAND)			### BORLAND COMPILER
 	    set(__BORLANDC__ 1)
 	    set(CMAKE_COMPILER_IS_GNUCC 0)
@@ -171,10 +166,11 @@ if(WIN32)
     
     set(_XBT_WIN32 1)
     
-    message(STATUS "C_COMPILER			$ENV{CC}")
-    message(STATUS "CXX_COMPILER			$ENV{CXX}")    
-    message(STATUS "INCLUDE			$ENV{INCLUDE}")
-    message(STATUS "LIB				$ENV{LIB}")
+    message(STATUS "C_COMPILER			${CMAKE_C_COMPILER} ${COMPILER_C_VERSION}")
+    message(STATUS "CXX_COMPILER			${CMAKE_CXX_COMPILER} ${COMPILER_CXX_VERSION}")
+    message(STATUS "CMAKE_RC_COMPILER	        ${CMAKE_RC_COMPILER}")     
+    message(STATUS "INCLUDE			${CMAKE_INCLUDE_WIN}")
+    message(STATUS "LIB				${CMAKE_LIB_WIN}")
     message(STATUS "MAKE_PROGRAM			${CMAKE_MAKE_PROGRAM}")
     message(STATUS "CMAKE_BUILD_TOOL		${CMAKE_BUILD_TOOL}")
     message(STATUS "LINKER			${CMAKE_LINKER}")
