--- a/examples/gras/properties/CMakeLists.txt
+++ b/examples/gras/properties/CMakeLists.txt
@@ -19,6 +19,7 @@ add_custom_command(
 							${CMAKE_CURRENT_BINARY_DIR}/_properties_bob.c
   					DEPENDS gras_stub_generator ${CMAKE_CURRENT_SOURCE_DIR}/properties.xml
   					COMMAND ${CMAKE_BINARY_DIR}/bin/gras_stub_generator properties ${CMAKE_CURRENT_SOURCE_DIR}/properties.xml
+					WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 					)
 					
 ### Add definitions for compile
