--- a/examples/amok/bandwidth/CMakeLists.txt
+++ b/examples/amok/bandwidth/CMakeLists.txt
@@ -20,6 +20,7 @@ add_custom_command(
 							${CMAKE_CURRENT_BINARY_DIR}/_bandwidth_sensor.c
   					DEPENDS gras_stub_generator ${CMAKE_CURRENT_SOURCE_DIR}/bandwidth.xml
   					COMMAND ${CMAKE_BINARY_DIR}/bin/gras_stub_generator bandwidth ${CMAKE_CURRENT_SOURCE_DIR}/bandwidth.xml
+					WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 					)
 					
 ### Add definitions for compile
