--- a/examples/gras/mmrpc/CMakeLists.txt
+++ b/examples/gras/mmrpc/CMakeLists.txt
@@ -24,6 +24,7 @@ add_custom_command(
 							${CMAKE_CURRENT_BINARY_DIR}/_mmrpc_server.c
   					DEPENDS gras_stub_generator ${CMAKE_CURRENT_SOURCE_DIR}/mmrpc.xml
   					COMMAND ${CMAKE_BINARY_DIR}/bin/gras_stub_generator mmrpc ${CMAKE_CURRENT_SOURCE_DIR}/mmrpc.xml
+                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 					)
 					
 ### Add definitions for compile
