--- a/examples/gras/pmm/CMakeLists.txt
+++ b/examples/gras/pmm/CMakeLists.txt
@@ -20,6 +20,7 @@ add_custom_command(
 							${CMAKE_CURRENT_BINARY_DIR}/_pmm_master.c
   					DEPENDS gras_stub_generator ${CMAKE_CURRENT_SOURCE_DIR}/pmm.xml
   					COMMAND ${CMAKE_BINARY_DIR}/bin/gras_stub_generator pmm ${CMAKE_CURRENT_SOURCE_DIR}/pmm.xml
+					WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 					)
 
 ### Add definitions for compile
