--- a/doc/index.php.in
+++ b/doc/index.php.in
@@ -67,8 +67,12 @@ echo '<?xml version="1.0" encoding="UTF-8"?>';
 
 	<tr>
         <td style="text-align: left; vertical-align: top;"><a href="http://<?php echo $domain; ?>/projects/<?php echo $group_name; ?>"><img
-          src="<?php if (date('m') == '04'  && date('d') == '01')  {echo 'simgrid_logo_smaller.png';} else {echo 'simgrid_logo_small.png';};?>"
-          style="text-decoration: underline;" border="0" alt="SimGrid"></a><br>
+          src="simgrid_logo_small.png"
+          style="text-decoration: underline;" border="0" alt="SimGrid">
+          <?php if (date('m') == '04'  && date('d') == '01')  {echo '<img style="text-decoration: underline;" border="0" alt="SimGrid" src="fish.gif">';}?>
+          </a><br>
+        </td>
+         <td style="text-align: left; vertical-align: top;">
         </td>
 		<td style="text-align: right; vertical-align: top;"><a href="http://<?php echo $domain; ?>"><img src="http://<?php echo $domain; ?>/themes/inria/images/logo.png" border="0" alt="gforge INRIA" width="198" height="52" /></a></td>
 	</tr>
