--- a/src/smpi/smpicc.in
+++ b/src/smpi/smpicc.in
@@ -6,7 +6,7 @@ CFLAGS="-O2 -Dmain=smpi_simulated_main"
 #FIXME: probably only want the last two pairs after 'make install'
 INCLUDEARGS="-I@top_srcdir@/include -I@top_srcdir@/include/smpi -I@includedir@ -I@includedir@/smpi"
 CMAKE_LINKARGS="-L@CMAKE_LINKARGS@"
-LINKARGS="-lsimgrid -lsmpi "
+LINKARGS="-lsimgrid -lsmpi -lm"
 
 CMDLINE=""
 while [ -n "$1" ]; do
