--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -503,7 +503,7 @@ INPUT                  = index.doc \
 			    gtut-howto.doc \
 			        gtut-howto-design.doc \
                          \
-                         ./logcategories.doc \
+                         @top_srcdir@/doc/logcategories.doc \
 			 \
                          @top_srcdir@/include/ \
                          @top_srcdir@/include/msg \
@@ -524,7 +524,6 @@ INPUT                  = index.doc \
                          @top_srcdir@/src/amok/Bandwidth \
                          @top_srcdir@/src/amok/PeerManagement \
                          @top_srcdir@/src/simdag \
-                         @top_srcdir@/src/java/simgrid/msg
 
 # This tag can be used to specify the character encoding of the source files that 
 # doxygen parses. Internally doxygen uses the UTF-8 encoding, which is also the default 
