--- a/tools/graphicator/CMakeLists.txt
+++ b/tools/graphicator/CMakeLists.txt
@@ -11,3 +11,8 @@ else(NOT WIN32)
 target_link_libraries(graphicator simgrid )
 endif(NOT WIN32)
 
+## Clean generated files
+get_directory_property(extra_clean_files ADDITIONAL_MAKE_CLEAN_FILES)
+set_directory_properties(
+	PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES
+        "${extra_clean_files};${CMAKE_CURRENT_BINARY_DIR}/simgrid.trace;")
