--- a/examples/msg/mc/CMakeLists.txt
+++ b/examples/msg/mc/CMakeLists.txt
@@ -7,9 +7,11 @@ add_executable(bugged1     bugged1.c)
 add_executable(bugged2     bugged2.c)
 add_executable(bugged3	   bugged3.c)
 add_executable(random_test random_test.c)
+add_executable(example_automaton automaton.c automatonparse_promela.c example_automaton.c)
 
 target_link_libraries(centralized simgrid m )
 target_link_libraries(bugged1     simgrid m )
 target_link_libraries(bugged2     simgrid m )
 target_link_libraries(bugged3     simgrid m )
 target_link_libraries(random_test     simgrid m )
+target_link_libraries(example_automaton     simgrid m )
