--- a/include/smpi/smpif.h.in
+++ b/include/smpi/smpif.h.in
@@ -17,7 +17,7 @@
 #include <smpi/smpi.h>
 #include <f2c.h>
 
-XBT_PUBLIC(int) smpi_current_rank;
+XBT_PUBLIC_DATA(__thread int) smpi_current_rank;
 
 XBT_PUBLIC(int) smpi_process_argc(void);
 XBT_PUBLIC(int) smpi_process_getarg(integer* index, char* dst, ftnlen len);
