Add XBT_INLINE functions to doxygen documentation. Create a new section for dynar : miscellaneous functions.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1512,7 +1512,8 @@ INCLUDE_FILE_PATTERNS  =
 
 PREDEFINED             = DOXYGEN \
                          DOXYGEN_SKIP_IT \
-                         XBT_PUBLIC=
+                         XBT_PUBLIC= \
+                         XBT_INLINE=
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
